testdata/invalid/capability_unknown_leaf.hzn
package probes

capability ConnectGrant danger block = "kernel.network.connect.grant"

@capability(ConnectGrant)
@cgroup("connect4")
func GrantConnect(ctx cgroup.Connect) i32 {
    return cgroup.Allow
}
